--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,12 @@ asgiref==3.4.1
 certifi==2021.5.30
 chardet==4.0.0
 Django==3.2.5
+django-environ==0.4.5
 environ==1.0
 idna==2.10
-numpy==1.19.5
+numpy==1.21.0
 oauthlib==3.1.1
-pandas==1.1.5
-pkg-resources==0.0.0
+pandas==1.3.0
 psycopg2==2.9.1
 PySocks==1.7.1
 python-dateutil==2.8.1
@@ -17,5 +17,4 @@ requests-oauthlib==1.3.0
 six==1.16.0
 sqlparse==0.4.1
 tweepy==3.10.0
-typing-extensions==3.10.0.0
 urllib3==1.26.6
