--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,31 @@
 asgiref==3.4.1
 certifi==2021.5.30
 chardet==4.0.0
+click==8.0.1
+cycler==0.10.0
 Django==3.2.5
 django-environ==0.4.5
 environ==1.0
 idna==2.10
+joblib==1.0.1
+kiwisolver==1.3.1
+matplotlib==3.4.2
+nltk==3.6.2
 numpy==1.21.0
 oauthlib==3.1.1
 pandas==1.3.0
+Pillow==8.3.1
 psycopg2==2.9.1
+pyparsing==2.4.7
 PySocks==1.7.1
 python-dateutil==2.8.1
 pytz==2021.1
+regex==2021.7.6
 requests==2.25.1
 requests-oauthlib==1.3.0
 six==1.16.0
 sqlparse==0.4.1
+textblob==0.15.3
+tqdm==4.61.2
 tweepy==3.10.0
 urllib3==1.26.6
